@@ -14,7 +14,12 @@ Search.prototype = $.extend({}, Navigation, new function() {
 
   this.init = function() {
     var _this = this;
-    var observer = function() {
+    var observer = function(e) {
+      switch(e.originalEvent.keyCode) {
+        case 38: // Event.KEY_UP
+        case 40: // Event.KEY_DOWN
+          return;
+      }
       _this.search(_this.$input[0].value);
     };
     this.$input.keyup(observer);
@@ -82,6 +87,8 @@ Search.prototype = $.extend({}, Navigation, new function() {
       this.$input.attr('aria-activedescendant', $next.attr('id'));
       this.scrollIntoView($next[0], this.$view[0]);
       this.$current = $next;
+      this.$input.val($next[0].firstChild.firstChild.text);
+      this.$input.select();
     }
     return true;
   }
